[gd_scene load_steps=2 format=1]

[ext_resource path="res://Project_sourses/Scenes/MainMenu.gd" type="Script" id=1]

[node name="Panel" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 601.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 102.0
margin/top = 3.0
margin/right = 923.0
margin/bottom = 200.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Legacy"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Settings" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 103.0
margin/top = 199.0
margin/right = 308.0
margin/bottom = 398.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Settings"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="Play" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 201.0
margin/right = 615.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play!"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="Play1" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 201.0
margin/right = 615.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play!"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="Play2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 201.0
margin/right = 615.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play!"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="Play3" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 201.0
margin/right = 615.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play!"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="Play4" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 201.0
margin/right = 615.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play!"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="Play5" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 201.0
margin/right = 615.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play!"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="Play6" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 201.0
margin/right = 615.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play!"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="Play7" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 201.0
margin/right = 615.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play!"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="Play8" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 201.0
margin/right = 615.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play!"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="Play9" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 201.0
margin/right = 615.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play!"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="Exit" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 716.0
margin/top = 202.0
margin/right = 921.0
margin/bottom = 401.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit :("
flat = false
__meta__ = {
"_edit_lock_": true
}


